--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </p>
         <div class="d-flex justify-content-center gap-3">
             <a href="#projetos" class="btn btn-primary btn-lg rounded-pill px-5">Ver Portfólio de Sucesso</a>
-            <a href="#servicos" class="btn btn-outline-light btn-lg rounded-pill px-5">Nossa Expertise</a>
+            <a href="#servicos" class="btn btn-outline-light btn-lg rounded-pill px-5">Nossa Experiencia</a>
         </div>
     </div>
 </section>
